--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,10 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.facebook.fresco:fresco:0.9.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
